--- a/ejerciciosOpcionales/tetris.html
+++ b/ejerciciosOpcionales/tetris.html
@@ -6,7 +6,7 @@
    <script src="tetris.js"></script>
 </head>
 <body>
-
+    <h1 id="paused"></h1>
     <canvas id="canvas" width="300" height="600"></canvas>
     <h2>Puntuación: </h2>
     <h3 id="puntuacion"></h3>
